--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "echarts": "^3.8.5",
+    "echarts-for-react": "^2.0.0",
     "history": "^4.7.2",
     "loadable-components": "^0.4.0",
     "material-design-icons": "^3.0.1",
@@ -45,6 +47,7 @@
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
+    "react-amap": "^1.1.4",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
