--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "echarts": "^3.8.5",
     "echarts-for-react": "^2.0.0",
@@ -48,6 +49,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-amap": "^1.1.4",
+    "react-amap-plugin-heatmap": "0.0.7",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
