--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "material-design-icons": "^3.0.1",
     "material-ui": "^1.0.0-beta.19",
     "material-ui-icons": "^1.0.0-beta.17",
+    "moment": "^2.19.4",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
